# bool-logic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  publish.yml
crates/bool-logic/: Cargo.toml
crates/bool-logic/src/: utils.rs
crates/bool-logic/src/cfg/: ast.rs
crates/bool-logic/src/transforms/: eval_const.rs  flatten_by_de_morgan.rs  merge_all_of_any.rs  merge_all_of_not_any.rs  mod.rs
crates/libc-cfg/: Cargo.toml
crates/libc-cfg/src/: lib.rs  main.rs  scan.rs  syn.rs  transform.rs
src/: ast.rs  lib.rs  visit_mut.rs
src/cfg/: parsing.rs
src/transforms/: dedup_list.rs  flatten_nested_list.rs  flatten_single.rs  merge_all_of_not_any.rs  simplify_all_not_any.rs  simplify_by_short_circuit.rs  simplify_nested_list.rs
