[package]
name = "bool-logic"
version = "0.3.3"
description = "A library for manipulating and evaluating boolean expressions"
readme = "README.md"
documentation = "https://docs.rs/bool-logic"
repository = "https://github.com/Nugine/bool-logic"
categories = ["algorithms", "mathematics", "data-structures"]
keywords = ["boolean", "logic", "expression", "evaluation"]
include = ["Cargo.lock", "Cargo.toml", "LICENSE", "README.md", "src/**/*.rs"]
edition = "2024"
license = "MIT"
rust-version = "1.87"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# deny
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[profile.release]
debug = "line-tables-only"
