[package]
name = "bool-logic"
version = "0.3.1"
description = "A library for manipulating and evaluating boolean expressions"
readme = "README.md"
documentation = "https://docs.rs/bool-logic"
categories = ["algorithms", "mathematics", "data-structures"]
keywords = ["boolean", "logic", "expression", "evaluation"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
