[package]
name = "libc-cfg"
version = "0.3.3"
description = "A codegen tool for extracting libc cfg"
readme = "README.md"
documentation = "https://docs.rs/libc-cfg"
categories = ["development-tools", "os"]
keywords = ["libc", "cfg", "codegen", "build"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "libc-cfg"
required-features = ["binary"]

[features]
binary = ["dep:clap", "dep:env_logger"]

[dependencies.bool-logic]
version = "0.3.3"
path = "../bool-logic"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
clap = { version = "4.5.51", features = ["derive"], optional = true }
env_logger = { version = "0.11.8", optional = true }
log = "0.4.28"
proc-macro2 = "1.0.103"
quote = "1.0.41"
regex = "1.12.2"
std-next = "0.1.9"
syn = { version = "2.0.108", features = ["full", "visit", "visit-mut", "extra-traits"] }
