[package]
name = "libc-cfg"
version = "0.3.3"
description = "A codegen tool for extracting libc cfg"
readme = "README.md"
documentation = "https://docs.rs/libc-cfg"
categories = ["development-tools", "os"]
keywords = ["libc", "cfg", "codegen", "build"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "libc-cfg"
required-features = ["binary"]

[features]
binary = ["dep:clap", "dep:env_logger"]

[dependencies.bool-logic]
version = "0.3.3"
path = "../bool-logic"

[dependencies]
anyhow = "1.0.102"
camino = "1.2.2"
clap = { version = "4.5.60", features = ["derive"], optional = true }
env_logger = { version = "0.11.9", optional = true }
log = "0.4.29"
proc-macro2 = "1.0.106"
quote = "1.0.44"
regex = "1.12.3"
std-next = "0.1.9"
syn = { version = "2.0.117", features = ["full", "visit", "visit-mut", "extra-traits"] }
